--- a/package.json
+++ b/package.json
@@ -6,24 +6,24 @@
     "dev": "next dev --turbopack --port 4041",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
-    "next": "15.4.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
+    "next": "16.0.9",
+    "react": "^19.2.2",
+    "react-dom": "^19.2.2",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^24",
+    "@types/node": "^25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.4.2",
+    "eslint-config-next": "16.0.9",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
